# grizzlyplot

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  modules.rst
src/: setup.py
src/grizzlyplot/: __init__.py  defaults.py  faceter.py  geom.py  geoms.py  grizzlyplot.py  position.py  scales.py  stats.py  transforms.py
src/test/: test_faceter.py  test_geom.py  test_mapping.py
